updating base.css path

--- a/index.html
+++ b/index.html
@@ -1,99 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8" />
-<title>Sketch Book</title>
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<link href="/base.css" rel="stylesheet" />
-<style>
-  .content {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    height: 100vh;
-  }
+  <meta charset="UTF-8" />
+  <title>Sketch Book</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link href="base.css" rel="stylesheet" />
+  <style>
+    .content {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      height: 100vh;
+    }
 
-  body>div {
-    display: inline-block;
-  }
+    body > div {
+      display: inline-block;
+    }
 
-  .content-inner {
-    display: flex;
-    justify-content: center;
-  }
+    .content-inner {
+      display: flex;
+      justify-content: center;
+    }
 
-  header {
-    flex-basis: 50%;
-  }
+    header {
+      flex-basis: 50%;
+    }
 
-  h1 {
-    font-size: 200rem;
-    line-height: 130rem;
-    text-align: right;
-  }
+    h1 {
+      font-size: 200rem;
+      line-height: 130rem;
+      text-align: right;
+    }
 
-  main {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-  }
+    main {
+      align-items: flex-start;
+      display: flex;
+      flex-direction: column;
+    }
 
-  nav:nth-child(1) {
-    margin-top: 10rem;
-  }
+    nav:nth-child(1) {
+      margin-top: 10rem;
+    }
 
-  nav {
-    margin-bottom: 20rem;
-  }
+    nav {
+      margin-bottom: 20rem;
+    }
 
-  a {
-    color: hsl(0, 0%, 50%);
-    text-decoration: none;
-  }
+    a {
+      color: hsl(0, 0%, 50%);
+      text-decoration: none;
+    }
 
-  li {
-    list-style-type: none;
-  }
+    li {
+      list-style-type: none;
+    }
 
-  main:first-child {
-    margin-top: 0;
-  }
-</style>
+    main:first-child {
+      margin-top: 0;
+    }
+  </style>
 
-<body>
-  <div>
-    <div class="content-inner">
-      <header>
-        <h1>Sketch Book</h1>
-      </header>
+  <body>
+    <div>
+      <div class="content-inner">
+        <header>
+          <h1>Sketch Book</h1>
+        </header>
 
-      <main>
-        <nav>
-          <h2>Animation</h2>
-          <ul>
-            <li><a href="/animation/draw.html">draw</a></li>
-            <li><a href="/animation/loader.html">loader</a></li>
-          </ul>
-        </nav>
+        <main>
+          <nav>
+            <h2>Animation</h2>
+            <ul>
+              <li><a href="/animation/draw.html">draw</a></li>
+              <li><a href="/animation/loader.html">loader</a></li>
+            </ul>
+          </nav>
 
-        <nav>
-          <h2>Art</h2>
-          <ul>
-            <li><a href="/art/blocks.html">blocks</a></li>
-            <li><a href="/art/lil-dude.html">lil dude</a></li>
-            <li><a href="/art/sunset.html">sunset</a></li>
-          </ul>
-        </nav>
+          <nav>
+            <h2>Art</h2>
+            <ul>
+              <li><a href="/art/blocks.html">blocks</a></li>
+              <li><a href="/art/lil-dude.html">lil dude</a></li>
+              <li><a href="/art/sunset.html">sunset</a></li>
+            </ul>
+          </nav>
 
-        <nav>
-          <h2>Icon</h2>
-          <ul>
-            <li><a href="/icon/account.html">account</a></li>
-            <li><a href="/icon/workstation.html">workstation</a></li>
-          </ul>
-        </nav>
-      </main>
+          <nav>
+            <h2>Icon</h2>
+            <ul>
+              <li><a href="/icon/account.html">account</a></li>
+              <li><a href="/icon/workstation.html">workstation</a></li>
+            </ul>
+          </nav>
+        </main>
+      </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
