organizing html into folders

--- a/draw/lil-dude.html
+++ b/draw/lil-dude.html
@@ -3,17 +3,9 @@
   <meta charset="UTF-8" />
   <title>Art One</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <link href="../base.css" rel="stylesheet" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      background-color: hsl(0, 0%, 90%);
-    }
-
     main {
       position: absolute;
       margin: auto;
