--- a/icon/workstation.html
+++ b/icon/workstation.html
@@ -3,21 +3,9 @@
   <meta charset="UTF-8" />
   <title>Icon - User</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <link href="../base.css" rel="stylesheet" />
   <style>
-    * {
-      padding: 0;
-      margin: 0;
-    }
-
-    html {
-      font-family: Helvetica, sans-serif;
-      font-size: 6.25%;
-    }
-
-    body {
-      font-size: 16rem;
-    }
-
     h1 {
       font-size: 75rem;
       text-align: center;
