adding apps icon

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <ul>
               <li><a href="icon/account.html">account</a></li>
               <li><a href="icon/workstation.html">workstation</a></li>
+              <li><a href="icon/apps.html">apps</a></li>
             </ul>
           </nav>
 
